# resguy

./: CMakeLists.txt  README.md
config/: default_content.txt  resguy_default_content.txt  resguy_default_content_hl.txt
src/: Bsp.cpp  Bsp.h  Entity.cpp  Entity.h  Keyvalue.cpp  Keyvalue.h  Mdl.cpp  Mdl.h  Wad.cpp  Wad.h  globals.h  main.cpp  script.cpp  script.h  studio.h  util.cpp  util.h
src/as_object/: generate_classes.py
